feat(pwa/ios): complete icon set, apple-touch-icon, viewport-fit, favicons

--- a/index.html
+++ b/index.html
@@ -3,21 +3,32 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="description" content="Plataforma exclusiva para membros do Prosperus Club" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <meta name="description"
+    content="Plataforma exclusiva para membros do Prosperus Club — networking, negócios, eventos e ferramentas de crescimento." />
 
   <!-- iOS PWA Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Prosperus" />
-  <link rel="apple-touch-icon" href="/app/default-avatar.svg" />
+
+  <!-- iOS Touch Icons (PNG, múltiplos tamanhos) -->
+  <link rel="apple-touch-icon" href="/app/icons/icon-180x180.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/app/icons/icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="167x167" href="/app/icons/icon-167x167.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/app/icons/icon-180x180.png" />
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/app/icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/app/icons/favicon-16x16.png" />
 
   <!-- Theme Color -->
   <meta name="theme-color" content="#0f172a" />
 
   <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/app/manifest.webmanifest" />
 
   <title>Prosperus Club</title>
   <script src="https://cdn.tailwindcss.com"></script>
