fix(ios): remove duplicate safe-area-inset-bottom from body - prevents double gap

--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
       -moz-osx-font-smoothing: grayscale;
       /* Prevent overscroll bounce on iOS */
       overscroll-behavior: none;
-      /* Safe area padding */
+      /* Safe area padding — bottom is handled by .safe-area-bottom on nav */
       padding-top: var(--safe-area-inset-top);
-      padding-bottom: var(--safe-area-inset-bottom);
       padding-left: var(--safe-area-inset-left);
       padding-right: var(--safe-area-inset-right);
     }
