fix(ios): remove safe-area padding-top from modal overlays - was pushing content down 47px

--- a/index.html
+++ b/index.html
@@ -95,21 +95,11 @@
       --safe-area-inset-left: env(safe-area-inset-left);
     }
 
-    /* ===== GLOBAL MODAL SAFE AREA FIX (iOS Standalone) ===== */
-    /* All fixed fullscreen overlays must respect the status bar safe area */
-    /* This covers ALL modals using fixed inset-0 (Tailwind) or modal-overlay (custom CSS) */
-    @supports (padding-top: env(safe-area-inset-top)) {
-
-      /* Tailwind-based modals: fixed inset-0 */
-      .fixed.inset-0 {
-        padding-top: env(safe-area-inset-top) !important;
-      }
-
-      /* Custom CSS modals (e.g. RegisterDealModal) */
-      .modal-overlay {
-        padding-top: env(safe-area-inset-top) !important;
-      }
-    }
+    /* ===== GLOBAL MODAL SAFE AREA — REMOVED ===== */
+    /* Previously added padding-top: env(safe-area-inset-top) to .fixed.inset-0 and .modal-overlay */
+    /* This was WRONG: it pushed modal content down ~47px on iPhone, creating a visible gap */
+    /* Modal overlays are position:fixed covering the full viewport — no extra padding needed */
+    /* The body already has padding-top: var(--safe-area-inset-top) for page-level safe areas */
 
     /* ===== iOS SCROLL LOCK (applied by useScrollLock hook) ===== */
     /* overflow:hidden on BOTH html+body blocks scroll on iOS Safari */
