fix: prevent body scroll on Android + dvh container + remove stacking context trapping modal

--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@
       padding-right: var(--safe-area-inset-right);
     }
 
+    /* Prevent body scroll — app is a fullscreen flex container */
+    html,
+    body {
+      overflow: hidden;
+      height: 100%;
+    }
+
     /* ===== CUSTOM SCROLLBAR (Navy/Gold Theme) ===== */
     ::-webkit-scrollbar {
       width: 8px;
