--- a/index.html
+++ b/index.html
@@ -482,15 +482,23 @@
         /* Prevent rubber band scrolling */
         position: fixed;
         width: 100%;
-        height: 100%;
+        height: 100dvh;
         overflow: hidden;
       }
 
       #root {
-        height: 100%;
+        height: 100dvh;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
       }
+    }
+
+    /* ===== DVH VIEWPORT FIX ===== */
+    /* Safari 100vh includes the address bar height, causing overflow.    */
+    /* 100dvh (Dynamic Viewport Height) adjusts when the bar shows/hides */
+    @supports (height: 100dvh) {
+      .min-h-screen { min-height: 100dvh !important; }
+      .h-screen     { height: 100dvh !important; }
     }
   </style>
 
